Add signature × organ heatmap and remove data files from tracking
- Update scAtlas data sources panel to show all 9 analyses
- Replace organ signature dropdown with searchable input
- Add "Both" option showing signatures present in CytoSig AND SecAct
- Add bar chart (single signature) + heatmap (all signatures) layout
- Update preprocessing to include all 1,170 SecAct proteins
- Remove visualization data files from git tracking (too large)
- Add visualization/data/*.json and *.js to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,9 +55,10 @@ slurm_logs/
 *.out
 *.err
 
-# Visualization large data (too large for git)
+# Visualization data files (generated, can be regenerated)
+visualization/data/*.json
+visualization/data/*.js
 visualization/data/*.h5ad
-visualization/data/*_large.json
 
 # Coverage
 .coverage
