Add 5-type validation system and QA agents framework
- Update validation schemas with comprehensive 5-type credibility system:
  1. Sample-level pseudobulk expression vs activity
  2. Cell type-level expression vs activity
  3. Pseudobulk vs single-cell comparison
  4. Single-cell direct (expressing vs non-expressing)
  5. Biological associations (known marker validation)

- Add QA agents framework (agents/):
  - progress_tracker.py: Track development milestones
  - validation_generator.py: Generate validation data from H5AD
  - qa_checkers/: Endpoint checker, schema validator, coverage reporter

- Add pre-commit and pre-push hooks for QA automation

- Update ARCHITECTURE.md with validation system documentation

- Update CLAUDE.md with CytoAtlas API usage instructions

- Update pyproject.toml to include agents package

--- a/cytoatlas-api/pyproject.toml
+++ b/cytoatlas-api/pyproject.toml
@@ -74,7 +74,7 @@ dev = [
 cytoatlas = "app.main:main"
 
 [tool.hatch.build.targets.wheel]
-packages = ["app"]
+packages = ["app", "agents"]
 
 [tool.ruff]
 target-version = "py310"
@@ -94,7 +94,7 @@ ignore = [
 ]
 
 [tool.ruff.isort]
-known-first-party = ["app"]
+known-first-party = ["app", "agents"]
 
 [tool.mypy]
 python_version = "3.10"
