--- a/cytoatlas-api/pyproject.toml
+++ b/cytoatlas-api/pyproject.toml
@@ -54,6 +54,13 @@ dependencies = [
     "httpx>=0.26.0",
     "python-multipart>=0.0.6",
     "orjson>=3.9.0",
+    "aiofiles>=23.2.0",
+
+    # WebSocket
+    "websockets>=11.0",
+
+    # LLM Integration
+    "anthropic>=0.7.0",
 
     # Monitoring
     "prometheus-client>=0.19.0",
