Improve gene detail page with per-organ activity and CytoSig-only detection
- Add CytoSig-only signature detection (11 signatures like IL2, IL4, IL17A
  that are in CytoSig but not SecAct) with explanatory UI messaging
- Show scAtlas activity per organ instead of aggregated across organs
- Fix heatmap colorscale: Blue (low) → White (0) → Red (high)
- Handle h5ad files with different gene name formats (categorical columns)
- Support n=1-2 samples in boxplots by returning points for scatter display
- Include all cell types in scatlas_celltypes.json (not just top 100)
- Fix cell type column names for Inflammation (Level2) and scAtlas (cellType2)
- Add z-score option to target gene expression computation
- Remove validation JSON files from git tracking (now in .gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,11 @@ htmlcov/
 !visualization/data/.gitkeep
 !results/.gitkeep
 !logs/.gitkeep
+
+visualization/data/validation/scatlas_validation.json
+visualization/data/validation/inflammation_validation.json
+visualization/data/validation/cima_validation.json
+visualization/data/boxplot/
+
+# API static data files (large, generated)
+cytoatlas-api/static/data/*.json
