Fix activity zscore bug, upgrade bulk validation to GTEx v11/TCGA PanCancer, and add resampled validation
- Fix ridge regression output: use result['zscore'] instead of result['beta'] in
  scripts 11, 11b, 12 for correct z-score-based activity inference
- Upgrade bulk validation (script 15) from TOIL-recomputed to native GTEx v11
  parquet (~19.8K samples) and TCGA PanCancer TSV (~11K samples) with TOIL fallback
- Add resampled pseudobulk validation pipeline (script 16) with bootstrap CIs
  (100 iterations, 80% cell resampling per cell type)
- Add SLURM scripts for bulk validation, scatlas cancer regeneration, and
  resampled validation
- Simplify visualization validation tabs: full-width scatter plots, add
  Cell Type Level (Resampled) tab, remove redundant panels
- Add data/bulk/ to .gitignore for downloaded bulk RNA-seq files

--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,8 @@ visualization/data/validation/inflammation_validation.json
 visualization/data/validation/cima_validation.json
 visualization/data/boxplot/
 
+# Bulk RNA-seq data (large, downloaded externally)
+data/bulk/
+
 # API static data files (large, generated)
 cytoatlas-api/static/data/*.json
