--- a/cytoatlas-api/pyproject.toml
+++ b/cytoatlas-api/pyproject.toml
@@ -60,7 +60,8 @@ dependencies = [
     "websockets>=11.0",
 
     # LLM Integration
-    "anthropic>=0.7.0",
+    "openai>=1.0.0",
+    "anthropic>=0.7.0",  # Fallback when vLLM is unavailable
 
     # Monitoring
     "prometheus-client>=0.19.0",
