--- a/cytoatlas-api/pyproject.toml
+++ b/cytoatlas-api/pyproject.toml
@@ -64,6 +64,10 @@ dependencies = [
     "openai>=1.0.0",
     "anthropic>=0.7.0",  # Fallback when vLLM is unavailable
 
+    # RAG (Retrieval Augmented Generation)
+    "lancedb>=0.4.0",
+    "sentence-transformers>=2.2.0",
+
     # Monitoring
     "prometheus-client>=0.19.0",
 ]
