--- a/cytoatlas-pipeline/pyproject.toml
+++ b/cytoatlas-pipeline/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "scikit-learn>=1.4.0",
     "statsmodels>=0.14.0",
     "tqdm>=4.66.0",
+    "pyyaml>=6.0.0",
 ]
 
 [project.optional-dependencies]
