Add lite data generator, chat tool loop, and LLM robustness fixes
- create_data_lite.py: reduces visualization/data (8.7 GB) to data_lite
  (~348 MB, 96% reduction) by filtering SecAct to top 50 + CytoSig names
  for cross-signature comparison, subsampling cell types/organs/diseases
- chat_service.py: multi-round tool loop (max 5 iterations) so LLM can
  chain tool calls (e.g. get_activity_data then create_visualization)
- llm_client.py: improved JSON repair scoring using per-tool expected keys
  to pick best candidate from Mistral's garbled streaming output
- mcp_tools.py: parameter name normalization to fix common Mistral mistakes
  (atlases->atlas_name, sig_type->signature_type, etc.)
- dev-server.py: --lite flag rewrites /data/ to /data_lite/ for fast local dev
- test_claude_vs_mistral.py: test harness comparing Claude vs Mistral tool use

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ slurm_logs/
 visualization/data/*.json
 visualization/data/*.js
 visualization/data/*.h5ad
+visualization/data_lite/
 
 # Coverage
 .coverage
