Complete service DuckDB migration, add deprecation warnings, and update dependencies
- Add new atlas data paths to config (NicheFormer, scGPT, cellxgene)
- Add deprecation docstrings to JSONRepository, ParquetRepository,
  and SQLiteScatterRepository pointing to DuckDBRepository
- Add duckdb and aiosqlite to cytoatlas-api pyproject.toml dependencies
- Add duckdb optional dependency to cytoatlas-pipeline pyproject.toml
- Add 10 explicit table configs to DuckDB conversion script for
  service-referenced JSON files (eqtl, biochem, treatment, etc.)

--- a/cytoatlas-api/pyproject.toml
+++ b/cytoatlas-api/pyproject.toml
@@ -32,7 +32,9 @@ dependencies = [
     # Database
     "sqlalchemy[asyncio]>=2.0.25",
     "asyncpg>=0.29.0",
+    "aiosqlite>=0.19.0",
     "alembic>=1.13.0",
+    "duckdb>=1.0.0",
 
     # Caching & Background Tasks
     "redis>=5.0.0",
