--- a/cytoatlas-pipeline/pyproject.toml
+++ b/cytoatlas-pipeline/pyproject.toml
@@ -57,6 +57,9 @@ celery = [
 parquet = [
     "pyarrow>=15.0.0",
 ]
+duckdb = [
+    "duckdb>=1.0.0",
+]
 dev = [
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
@@ -65,7 +68,7 @@ dev = [
     "mypy>=1.8.0",
 ]
 all = [
-    "cytoatlas-pipeline[gpu,cellxgene,celery,parquet,dev]",
+    "cytoatlas-pipeline[gpu,cellxgene,celery,parquet,duckdb,dev]",
 ]
 
 [project.scripts]
