Move atlas and signature selectors into per-tab controls in validation page
Each validation tab now has its own atlas and signature type dropdowns
instead of shared global selectors. Bulk RNA-seq uses GTEx/TCGA datasets
with CytoSig/SecAct only (no LinCytoSig). Donor and Cell Type tabs use
all 6 SC atlases with all 3 signature types. Single-Cell tab uses the 3
atlases that have SC validation data with CytoSig/SecAct.

Summary tab redesigned as a single panel with CytoSig (blue) and SecAct
(orange) boxplots side-by-side using grouped box mode.

Also includes archive reorganization, docs updates, and config cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ data/bulk/
 
 # API static data files (large, generated)
 cytoatlas-api/static/data/*.json
+
+# Runtime artifacts
+cytoatlas-api/logs/
+scripts/__pycache__/
