Split 5.5GB bulk_donor_correlations.json into per-atlas-sigtype files
Created validation/donor_scatter/ and validation/celltype_scatter/
directories with individual JSON files (0.1-461 MB each) so the API
can load only the requested atlas+sigtype instead of the entire 5.5GB
monolith. Also added validation/ dir to .gitignore.

Donor level tab was failing with "Failed to fetch" because the monolith
fallback either OOM'd or timed out on the server.

--- a/.gitignore
+++ b/.gitignore
@@ -73,9 +73,7 @@ htmlcov/
 !results/.gitkeep
 !logs/.gitkeep
 
-visualization/data/validation/scatlas_validation.json
-visualization/data/validation/inflammation_validation.json
-visualization/data/validation/cima_validation.json
+visualization/data/validation/
 visualization/data/boxplot/
 
 # Bulk RNA-seq data (large, downloaded externally)
