Add per-tab signature exploration, per-group analytics, and batch validation data generation
Validation tabs: replace global signature toggle with per-tab CytoSig/LinCytoSig/SecAct
selectors, add SearchableSelect for 1,249 SecAct signatures, add group filtering
(cell type, tissue, cancer type), per-group correlation bar charts and boxplot
distributions, and "hide non-expressing" checkbox across all 5 validation views.

Comparison tabs: add signature reliability table with per-atlas pairwise correlations
and conservation categories to conserved tab, add per-cell-type grouped bar chart
to atlas comparison tab.

Charts: ScatterChart gains group coloring and WebGL rendering for >1K points,
VolcanoChart gains maxPoints truncation for SecAct and custom directional labels,
BarChart gains per-category color support.

CIMA panels: redesign multiomics panel with bar/table toggle, subset filtering,
adjustable correlation threshold; add correlation threshold to metabolites panel;
add demographic pie chart to population panel.

Differential panel: add variable selection for population context, SecAct volcano
auto-truncation, context-aware directional labels.

Backend: add row-batch streaming mode (--batch) to generate_validation_data.py,
reducing HDF5 I/O from 2,498 passes (SecAct) to ~4 passes with GPU acceleration.

Pipeline scripts: minor fixes to Tahoe, spatial, parse_10M, and neighborhood scripts.

--- a/scripts/slurm/jobs.yaml
+++ b/scripts/slurm/jobs.yaml
@@ -264,20 +264,14 @@ jobs:
     depends_on: [tahoe]
 
   # === Phase 22: Spatial Analyses ===
-  spatial_visium:
-    name: "Spatial Visium Activity"
+  # Combined into single job to avoid output file conflicts
+  # (both visium and targeted write to spatial_activity_by_technology.h5ad)
+  spatial:
+    name: "Spatial Activity (All Technologies)"
     profile: gpu_heavy
     time: "48:00:00"
     script: "scripts/20_spatial_activity.py"
-    args: "--technology visium"
-    phase: 22
-
-  spatial_targeted:
-    name: "Spatial Targeted Scoring"
-    profile: gpu_medium
-    time: "24:00:00"
-    script: "scripts/20_spatial_activity.py"
-    args: "--technology targeted"
+    args: "--technology all"
     phase: 22
 
   spatial_neighborhood:
@@ -287,7 +281,7 @@ jobs:
     script: "scripts/23_spatial_neighborhood.py"
     args: ""
     phase: 23
-    depends_on: [spatial_visium, spatial_targeted]
+    depends_on: [spatial]
 
   # === Phase 24: Perturbation/Spatial Preprocessing ===
   preprocess_perturbation:
